--- a/CIFE/.cproject
+++ b/CIFE/.cproject
@@ -28,12 +28,12 @@
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.1958470383" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/include/wx-3.0/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0/wx/setup.h"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.other.1644935299" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c $(shell /usr/bin/wx-config --static=no --cxxflags)" valueType="string"/>
 								<option id="gnu.cpp.compiler.option.debugging.sanitaddress.1278542880" name="Sanitize address (-fsanitize=address)" superClass="gnu.cpp.compiler.option.debugging.sanitaddress" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="gnu.cpp.compiler.option.debugging.sanitleak.775826341" name="Sanitize memory leak (-fsanitize=leak)" superClass="gnu.cpp.compiler.option.debugging.sanitleak" useByScannerDiscovery="false" value="false" valueType="boolean"/>
+								<option id="gnu.cpp.compiler.option.warnings.extrawarn.1602778674" name="Extra warnings (-Wextra)" superClass="gnu.cpp.compiler.option.warnings.extrawarn" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.958770174" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool commandLinePattern="${COMMAND} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT} ${INPUTS} ${EXTRA_FLAGS} ${FLAGS}" id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.2055068707" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
@@ -44,12 +44,13 @@
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.934637278" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/include/wx-3.0/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0/wx/setup.h"/>
 								</option>
 								<option id="gnu.c.compiler.option.misc.other.651287440" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c $(shell /usr/bin/wx-config --static=no --cxxflags)" valueType="string"/>
 								<option id="gnu.c.compiler.option.debugging.sanitaddress.1918622938" name="Sanitize address (-fsanitize=address)" superClass="gnu.c.compiler.option.debugging.sanitaddress" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="gnu.c.compiler.option.debugging.sanitleak.688932462" name="Sanitize memory leak (-fsanitize=leak)" superClass="gnu.c.compiler.option.debugging.sanitleak" useByScannerDiscovery="false" value="false" valueType="boolean"/>
+								<option id="gnu.c.compiler.option.warnings.extrawarn.12402422" name="Extra warnings (-Wextra)" superClass="gnu.c.compiler.option.warnings.extrawarn" useByScannerDiscovery="false" value="false" valueType="boolean"/>
+								<option id="gnu.c.compiler.option.warnings.toerrors.821532006" name="Warnings as errors (-Werror)" superClass="gnu.c.compiler.option.warnings.toerrors" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1065727275" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.382137197" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
@@ -96,7 +97,6 @@
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.40302432" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/include/wx-3.0/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0/wx/setup.h"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.other.975195884" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c $(shell /usr/bin/wx-config --static=no --cxxflags)" valueType="string"/>
@@ -114,7 +114,6 @@
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.189307412" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/include/wx-3.0/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/lib/x86_64-linux-gnu/wx/include/gtk3-unicode-3.0/wx/setup.h"/>
 								</option>
 								<option id="gnu.c.compiler.option.misc.other.93405469" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c $(shell /usr/bin/wx-config --static=no --cxxflags)" valueType="string"/>
@@ -168,7 +167,6 @@
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.1414059981" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/local/include/wx-3.2/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2/wx/setup.h"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.other.1185807981" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c $(shell /usr/local/bin/wx-config --static=yes --cxxflags)" valueType="string"/>
@@ -185,7 +183,6 @@
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.1670260204" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/local/include/wx-3.2/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2/wx/setup.h"/>
 								</option>
 								<option id="gnu.c.compiler.option.misc.other.279038157" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c $(shell /usr/local/bin/wx-config --static=yes --cxxflags)" valueType="string"/>
@@ -237,7 +234,6 @@
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.412589695" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/local/include/wx-3.2/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2/wx/setup.h"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.other.other.432678377" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c $(shell /usr/local/bin/wx-config --static=yes --cxxflags)" valueType="string"/>
@@ -257,7 +253,6 @@
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.135611066" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="/usr/local/include/wx-3.2/wx/wx.h"/>
 									<listOptionValue builtIn="false" value="/usr/local/lib/wx/include/gtk3-unicode-static-3.2/wx/setup.h"/>
 								</option>
 								<option id="gnu.c.compiler.option.misc.other.48141463" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c $(shell /usr/local/bin/wx-config --static=yes --cxxflags)" valueType="string"/>
@@ -299,7 +294,7 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.exe.debug.280105441" name="MSW-Debug_wx3.2_64bit_static" optionalBuildProperties="org.eclipse.cdt.docker.launcher.containerbuild.property.volumes=,org.eclipse.cdt.docker.launcher.containerbuild.property.selectedvolumes=" parent="cdt.managedbuild.config.gnu.exe.debug" prebuildStep="windres -i&quot;${ProjDirPath}/${ProjName}.rc&quot; -o&quot;${CWD}\${ProjName}_rc.o&quot; $(shell wx-config --rcflags)">
+				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.exe.debug.280105441" name="MSW-Debug_wx3.2_64bit_static" optionalBuildProperties="org.eclipse.cdt.docker.launcher.containerbuild.property.selectedvolumes=,org.eclipse.cdt.docker.launcher.containerbuild.property.volumes=" parent="cdt.managedbuild.config.gnu.exe.debug" prebuildStep="windres -i&quot;${ProjDirPath}/${ProjName}.rc&quot; -o&quot;${CWD}\${ProjName}_rc.o&quot; $(shell wx-config --rcflags)">
 					<folderInfo id="cdt.managedbuild.config.gnu.exe.debug.280105441." name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.mingw.base.1146210465" name="MinGW GCC" superClass="cdt.managedbuild.toolchain.gnu.mingw.base">
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.PE64" id="cdt.managedbuild.target.gnu.platform.mingw.base.104926910" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.mingw.base"/>
@@ -314,7 +309,6 @@
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}&quot;"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.1509103205" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.optimization.level.1686017113" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
@@ -330,7 +324,6 @@
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.c.compiler.option.preprocessor.def.symbols.2008336634" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.1710485284" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.167163574" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
@@ -384,7 +377,6 @@
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}&quot;"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.1977292276" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.optimization.level.841845264" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
@@ -405,7 +397,6 @@
 									<listOptionValue builtIn="false" value="wxDEBUG_LEVEL=0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.388033553" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.1020895195" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.c.optimization.level.most" valueType="enumerated"/>
@@ -460,7 +451,6 @@
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}&quot;"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.1031924680" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.optimization.level.886843605" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
@@ -476,7 +466,6 @@
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.c.compiler.option.preprocessor.def.symbols.1945295732" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.1478363525" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.373834322" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" valueType="enumerated"/>
@@ -530,7 +519,6 @@
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}&quot;"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.files.712708056" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.optimization.level.1936020857" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
@@ -551,7 +539,6 @@
 									<listOptionValue builtIn="false" value="wxDEBUG_LEVEL=0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.files.263794112" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles">
-									<listOptionValue builtIn="false" value="&quot;${WXWIN}\include\wx\wx.h&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${WXWIN}\lib\${WXCFG}\wx\setup.h&quot;"/>
 								</option>
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.option.optimization.level.1270436982" name="Optimization Level" superClass="gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.c.optimization.level.most" valueType="enumerated"/>
